Bug 114190 - Amarok gives HT-warning when run on an Athlon X2 processor
Summary: Amarok gives HT-warning when run on an Athlon X2 processor
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.3.3
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-10-10 21:07 UTC by Sven Lankes
Modified: 2006-06-11 12:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
/proc/cpuinfo showing ht-flag (1.25 KB, text/plain)
2005-10-10 21:14 UTC, Sven Lankes
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Lankes 2005-10-10 21:07:21 UTC
Version:           1.3.3 (using KDE KDE 3.4.90)
Installed from:    Gentoo Packages

When starting amarok on an AMD Athlon X2-Processor (Dual Core) it gives a warning about possible 
instability on HT-enabled processors.

Apparently AMD returns the HT-Flag for their X2-processors on purposes so applications can switch 
on HT-enabled optimizations.

I have attached the output of cat /proc/cpuinfo

I think it would be best to add an additional check for the processor type (or only raise the error 
for Intel-processors). While this is a hack I don't think that it's likely that AMD will ever 
release a HT-processor.
Comment 1 Sven Lankes 2005-10-10 21:14:06 UTC
Created attachment 12939 [details]
/proc/cpuinfo showing ht-flag
Comment 2 Mark Kretschmann 2005-10-14 18:00:11 UTC
SVN commit 470652 by markey:

Don't show a HyperThreading warning for Athlon 64 X2 CPU.

Testing welcome.

BUG: 114190



 M  +1 -0      ChangeLog  
 M  +6 -0      src/app.cpp  


--- trunk/extragear/multimedia/amarok/ChangeLog #470651:470652
@@ -21,6 +21,7 @@
       icon, respectively.
 
   BUGFIXES:
+    * Don't show a HyperThreading warning for Athlon 64 X2 CPU. (BR 114190)
     * With Random Mode enabled and Repeat Playlist disabled, when it got to
       the last track, it would play it a second time and then keep on playing
       other tracks, instead of just stopping.
--- trunk/extragear/multimedia/amarok/src/app.cpp #470651:470652
@@ -154,6 +154,12 @@
     QFile cpuinfo( "/proc/cpuinfo" );
     if ( cpuinfo.open( IO_ReadOnly ) ) {
         while ( cpuinfo.readLine( line, 20000 ) != -1 ) {
+            if ( line.startsWith( "vendor_id" ) && line.contains( "AuthenticAMD" ) ) {
+                // Special case for AMD CPU's like the Athlon 64 X2, which reports a bogus
+                // HT flag. @see BUG 114190
+                cpuCount = 1;
+                break;
+            }
             if ( line.startsWith( "flags" ) ) {
                 const QString flagsLine = line.section( ":", 1 );
                 const QStringList flags = QStringList::split( " ", flagsLine );