Don't show a HyperThreading warning for Athlon 64 X2 CPU.

Testing welcome.

BUG: 114190


svn path=/trunk/extragear/multimedia/amarok/; revision=470652